# skill-video-plan-editor

./: .gitignore  PESQUISA-E-DESIGN.md  README.md  SKILL.md  index.html  pyproject.toml
docs/superpowers/plans/: 2026-06-06-video-plan-editor-core.md
docs/superpowers/specs/: 2026-06-06-video-plan-editor-design.md
examples/: exemplo-viral-pao.json
knowledge/: README.md  pacing.md  render.md  storyboard.md  tokens.md
knowledge/archetypes/: README.md  cinematic-hero.md
knowledge/camera/: vocabulary.md
knowledge/motion/: eases.md  recipes.md  textures.md
knowledge/prompting/: best-practices.md  clip-direction.md  library.md  structures.md
knowledge/strategy/: cases.md  checklist.md  formats.md  frameworks.md  hooks.md  matrix.md  templates.md
tests/: test_builder.py  test_cli.py  test_detect.py  test_models.py  test_presets.py  test_resumo.py  test_validate.py
video_plan_editor/: __init__.py  builder.py  cli.py  detect.py  models.py  presets.py  resumo.py  validate.py
