[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "video-plan-editor"
version = "0.1.0"
description = "Gera planos profissionais de edição de vídeo a partir de assunto/link"
requires-python = ">=3.11"
dependencies = ["pydantic>=2.6"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
vpe = "video_plan_editor.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["video_plan_editor"]

[tool.pytest.ini_options]
testpaths = ["tests"]
